# FlirImageExtractor

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-backup.yml  publish.yml
dji_executables/linux/release_x64/: dji_irp
dji_executables/linux/release_x86/: dji_irp
docs/source/: conf.py  flirimageextractor.rst
flir_image_extractor_cli/: flir_image_extractor.py
flir_image_extractor_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
flirimageextractor/: __init__.py  __main__.py  flir_image_extractor.py  processing.py
flirimageextractor.egg-info/: requires.txt
