[tool.poetry]
name = "flirimageextractor"
version = "1.5.3"
description = "A small tool/lib to read temperatures and original photos from FLIR® thermal camera images."
authors = [
    "National Drones <development@nationaldrones.com>",
    "olawale williams <olawalewilliams9438@gmail.com>",
]
readme = "README.md"
maintainers = [
    "olawale williams <olawalewilliams9438@gmail.com>",
]
license = "MIT"
repository = "https://github.com/nationaldronesau/FlirImageExtractor"
homepage = "https://github.com/nationaldronesau/FlirImageExtractor"
documentation = ""

keywords = ["extract-images", "flir", "thermal", "flirtools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]

[tool.poetry.dependencies]
# These packages are mandatory and form the core of this package’s distribution.
python = "^3.7"
pillow = "9.5.0"
matplotlib = "3.5.3"
numpy = "1.21.1"
sphinx = "5.3.0"
keyring = "23.13.1"
loguru = "0.7.0"
logzero = "1.7.0"
opencv-python = "4.5.1.48"
requests = "2.28.2"
tqdm = "4.65.0"
m2r = "0.3.1"


# [tool.poetry.plugins] # Optional super table

# [tool.poetry.plugins."airflow.plugins"]
# flir-image-extractor = "flirimageextractor.__main__:main"

[tool.poetry.scripts]
flir-image-extractor = 'flirimageextractor.__main__:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "23.3.0"
pre-commit = "2.21.0"


[tool.poetry.group.extras.dependencies]
wxpython = {version = "^4.2.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
