[tool.poetry]
name = "flirimageextractor"
version = "1.5.5"
description = "A small tool/lib to read temperatures and original photos from FLIR® thermal camera images."
authors = [
    "National Drones <development@nationaldrones.com>",
    "olawale williams <olawalewilliams9438@gmail.com>",
]
readme = "README.md"
maintainers = [
    "olawale williams <olawalewilliams9438@gmail.com>",
]
license = "MIT"
repository = "https://github.com/nationaldronesau/FlirImageExtractor"
homepage = "https://github.com/nationaldronesau/FlirImageExtractor"
documentation = "https://github.com/nationaldronesau/FlirImageExtractor"

keywords = ["extract-images", "flir", "thermal", "flirtools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]

[tool.poetry.dependencies]
# These packages are mandatory and form the core of this package’s distribution.
# Compatible Python versions
python = "^3.10"
pillow = "^10.3.0"
matplotlib = "^3.9.0"
numpy = "^2.0.0"
sphinx = "^7.3.7"
keyring = "^25.2.1"
loguru = "^0.7.2"
logzero = "^1.7.0"
opencv-python = "^4.10.0.84"
requests = "^2.32.3"
tqdm = "^4.66.4"


# [tool.poetry.plugins] # Optional super table

# [tool.poetry.plugins."airflow.plugins"]
# flir-image-extractor = "flirimageextractor.__main__:main"

[tool.poetry.scripts]
flir-image-extractor = 'flirimageextractor.__main__:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "23.3.0"
pre-commit = "2.21.0"
prompt-toolkit = "^3.0.47"


[tool.poetry.group.extras.dependencies]
wxpython = {version = "^4.2.0", optional = true}
m2r = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
